--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "main": "app.js",
   "scripts": {
     "server": "nodemon app.js",
-    "start": "node app.js"    
+    "server:debug": "nodemon --inspect app.js",
+    "start": "node app.js",
+    "frontend-install": "npm install --prefix frontend",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "validator": "^12.1.0"
   },
   "devDependencies": {
